# bilibili-transcript-app

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: implementation-plan.md  ui-design-plan.md
resources/: default.toml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/bilibili/: api.rs  cookie.rs  mod.rs  subtitle.rs  types.rs
src-tauri/src/commands/: config.rs  cookie.rs  favorite.rs  history.rs  log.rs  mod.rs  task.rs  transcribe.rs  video.rs
src-tauri/src/config/: mod.rs  storage.rs  types.rs
src-tauri/src/download/: audio.rs  mod.rs  video.rs
src-tauri/src/storage/: database.rs  file.rs  mod.rs  task.rs
src-tauri/src/summary/: mod.rs  openai.rs
src-tauri/src/task/: mod.rs
src-tauri/src/transcribe/: mod.rs  pipeline.rs  whisper.rs
src/components/: InputBar.tsx  Layout.tsx  LogViewer.tsx  Sidebar.tsx  TaskPanel.tsx  TaskToast.tsx  TranscribeModal.tsx  VideoCard.tsx
src/components/common/: Button.tsx  Spinner.tsx  Toast.tsx
src/lib/: tauri.ts
src/pages/: AIAnalysis.tsx  AudioDownload.tsx  AudioTranscribe.tsx  Favorite.tsx  Home.tsx  Logs.tsx  Settings.tsx  VideoDownload.tsx
src/styles/: global.css
